Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.1.1, 5.5.1
-
Fix Version/s: 5.6.0
-
Component/s: GUI: Accessibility (a11y), Widgets: Widgets and Dialogs
-
Labels:
-
Commits:de27b71c1983768186b7f9df0a5158a7c5e6c903 (dev, 31.1.2014, 5.3) 753ebd5ba02d2f3e7286f69626d8415f52b775fc
Description
My Messagebox is silent i don't have sound
I think it 's a bug related problem Qt Version 5.xxx
I have a serious problem with the new version Qt
When I use the standard dialogs, appears without a sounds in the dialogue were.
this bug existing on the new versions of qt for windows only (5.xxx).
i not testing on others OS.
When i using of qt version 4.8.5 with mingw 4.40 don't have any problem. but when i using the last and new versions of qt on windows XP or 7 This problem occurs.
Attachments
Issue Links
- relates to
-
QTBUG-81342 Microsoft Windows message box native beep sound missing with QMessageBox.
-
- Closed
-
- replaces
-
QTBUG-35828 Sound in QMessageBox
-
- Closed
-