Windows: Fixed alert sound of QMessageBox.

Task-number: QTBUG-33303

Change-Id: I184f169a2ae0e1fa5e21b906c1f7659316030b34
Reviewed-by: Jan Arve Sæther <jan-arve.saether@digia.com>

cregit: de27b71c1983768186b7f9df0a5158a7c5e6c903 https://github.com/qt/qtbase/commit/de27b71c1983768186b7f9df0a5158a7c5e6c903